MEDIASSIST-WORK/Medi-Sample-Files/api_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetproapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetproapi
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dotnetproapi
    spec:
      containers:
      - name: dotnetproapi
        image: docker-registry.mediassistindia.com/prodapi:2020011701
        ports:
        - name: pm-port
          containerPort: 6050
        resources:
          requests:
            cpu: 450m
        livenessProbe:
          httpGet:
            path: /swagger
            port: 6050
          initialDelaySeconds: 5
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /swagger
            port: 6050
          initialDelaySeconds: 5
          timeoutSeconds: 30
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
      - name: tz-config
        hostPath:
           path: /usr/share/zoneinfo/Asia/Kolkata
      imagePullSecrets:
      - name: mbdockerregistrycredential
