MEDIASSIST-WORK/Medi-Sample-Files/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreproclaimapi-service
spec:
  ports:
  - port: 80
    targetPort: pm-port
    protocol: TCP
  selector:
    app: coreproclaimapi
