MEDIASSIST-WORK/Medi-Sample-Files/ingress_mapi.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coreproclaimapi
spec:
  rules:
    - host: api-prod.mediassist.in
      http:
        paths:
          - backend:
              serviceName: coreproclaimapi-service
              servicePort: 80
